hopefully fixed bgs bugging out on safari
https://caniuse.com/?search=%20background-attachment

thanks apple

--- a/compact.css
+++ b/compact.css
@@ -1,20 +1,34 @@
 body {
+    width: 100%;
+    height: 100%;
+
     font-family: 'Inclusive Sans', sans-serif;
     font-display: swap;
 
-    background: #647784;
+    margin:0;
+    text-align: center;
+}
 
+.background-wrapper {
+    position: relative;
+    z-index: -1;
+}
+  
+.background-wrapper::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5), 
         rgba(0, 0, 0, 0.5)
-      ), url('images/peaks.webp');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    ), url('images/peaks.webp');
     background-size: cover;
     background-position: center;
-    margin:0;
-
-    text-align: center;
+    background-repeat: no-repeat;
+    z-index: -1; /* Place it behind the content */
 }
 
 #title_mobile {
@@ -86,8 +100,6 @@ body {
 }
 
 /* Main Schedule Styling */
-
-
 .block_select {
     width: 35px;
     height: 35px;
